--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -30,7 +30,7 @@ gem 'tzinfo-data'
 gem 'devise'
 
 # Use ActiveModel has_secure_password
-gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
