--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -3,7 +3,14 @@ source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.1'
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+group :production do 
+	gem 'pg'
+	gem 'rails_12factor'
+end
+group :development, :test do
+	gem 'sqlite3'
+end
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
@@ -26,7 +33,6 @@ gem 'bootstrap-sass', '~> 3.2.0'
 gem 'autoprefixer-rails'
 gem 'tzinfo-data'
 
-
 gem 'devise'
 
 # Use ActiveModel has_secure_password
@@ -48,4 +54,6 @@ group :development, :test do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 end
+
+ruby "2.1.5"
 
