Fixed sticky footer and updated parts of high scores

--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -38,6 +38,9 @@ gem 'devise'
 # Use ActiveModel has_secure_password
 gem 'bcrypt'
 
+# Use Materialize gem for ui
+gem 'materialize-sass'
+
 # Use Unicorn as the app server
 # gem 'unicorn'
 
