--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -4,8 +4,9 @@ ruby "2.1.5"
 gem 'rails', '4.2.1'
 # Use sqlite3 as the database for Active Record
 group :production do 
-	#gem 'pg'
+	gem 'pg'
 	gem 'rails_12factor'
+	gem 'mailgun-ruby', '~>1.0.2', require: 'mailgun'
 end
 group :development, :test do
 	gem 'sqlite3'
@@ -38,9 +39,6 @@ gem 'devise'
 
 # Use ActiveModel has_secure_password
 gem 'bcrypt'
-
-# Use Materialize gem for ui
-gem 'materialize-sass'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
