added functionality to tabulate scores:

--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -45,6 +45,10 @@ gem 'materialize-sass'
 # Use Unicorn as the app server
 # gem 'unicorn'
 
+gem 'jquery-ui-rails'
+#use bootstrap datepicker for datepicker on scores page
+gem 'bootstrap-datepicker-rails'
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
